# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  benchmark.cpp  build.sh  doubledouble.hpp  float.hpp  floatext.hpp  floattype.cpp  floattype.hpp  format.hpp  gmon.out  gmpfloat.hpp  i686-w64-mingw32.toolchain  mandelbrot.cpp  mandelbrot.hpp  mpfrfloat.hpp  palette.cpp  palette.hpp  release.sh  render.cpp  render.hpp  semaphore.hpp  strop.hpp  typenames.hpp  typescript  unittest.cpp  x86_64-w64-mingw32.toolchain
